--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,11 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@ethersproject/experimental": "^5.7.0",
     "@tableland/sdk": "^4.5.3-dev.0",
+    "baojs": "^0.2.1",
     "d1-orm": "^0.8.0",
-    "ethers": "^6.8.0"
+    "dotenv": "^16.3.1",
+    "ethers": "^5.7.2"
   }
 }
