--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "bun-types": "^1.0.6"
   },
   "peerDependencies": {
@@ -11,9 +12,13 @@
   "dependencies": {
     "@ethersproject/experimental": "^5.7.0",
     "@tableland/sdk": "^4.5.3-dev.0",
+    "@types/express": "^4.17.20",
+    "@types/node": "^20.8.7",
     "baojs": "^0.2.1",
+    "cors": "^2.8.5",
     "d1-orm": "^0.8.0",
     "dotenv": "^16.3.1",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "express": "^4.18.2"
   }
 }
