--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@safe-global/api-kit": "^1.2.0",
+    "@safe-global/auth-kit": "^1.2.1",
+    "@safe-global/protocol-kit": "^1.2.0",
+    "@safe-global/relay-kit": "^1.3.0",
+    "@web3auth/base": "^7.0.4",
+    "@web3auth/ethereum-provider": "^7.0.4",
+    "@web3auth/modal": "^7.0.4",
+    "@web3auth/openlogin-adapter": "^7.0.4",
     "antd": "^5.10.1",
+    "bignumber.js": "^9.1.2",
+    "buffer": "^6.0.3",
+    "ethers": "^5.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +34,9 @@
     "web3.storage": "^4.5.5"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -28,6 +44,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "vite": "^4.4.5"
   }
 }
