--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@web3auth/modal": "^7.0.4",
     "@web3auth/openlogin-adapter": "^7.0.4",
     "antd": "^5.10.1",
+    "axios": "^1.5.1",
     "bignumber.js": "^9.1.2",
     "buffer": "^6.0.3",
     "ethers": "^5.5.0",
@@ -30,6 +31,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-metamask-avatar": "^1.2.1",
     "react-router-dom": "^6.17.0",
     "web3.storage": "^4.5.5"
   },
