--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
+    "@rollup/plugin-inject": "^5.0.5",
     "@safe-global/api-kit": "^1.2.0",
     "@safe-global/auth-kit": "^1.2.1",
     "@safe-global/protocol-kit": "^1.2.0",
@@ -19,29 +20,31 @@
     "antd": "^5.10.1",
     "axios": "^1.5.1",
     "bignumber.js": "^9.1.2",
-    "buffer": "^6.0.3",
     "ethers": "^5.5.0",
+    "events": "^3.3.0",
     "moment": "^2.29.4",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "util": "^0.12.5",
     "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@rollup/plugin-commonjs": "^24.0.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "buffer": "^6.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "rollup-plugin-polyfill-node": "^0.12.0",
     "vite": "^4.4.5"
   }
 }
