--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "@rollup/plugin-inject": "^5.0.5",
     "@safe-global/api-kit": "^1.2.0",
     "@safe-global/auth-kit": "^1.2.1",
@@ -29,7 +30,9 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "redux": "^4.2.1",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "util": "^0.12.5",
     "web3.storage": "^4.5.5"
