--- a/nft-contracts/package.json
+++ b/nft-contracts/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.0",
     "dotenv": "^16.3.1",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-log-remover": "^2.0.2"
   }
 }
