--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.4",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
